results/print-ir/expected/failure/resolver/no_return.psy.out
Parsed OK
error: Able to reach end of function without 'ret'.
  --> tests/failure/resolver/no_return.psy:1:8
   |
  1| fun foo(g: int) -> bool {
   |        ^--- Here


Semantic analysis failed. Compilation stopped.
